# civora

./: .gitignore  AGENTS.md  CLIENT.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  REUSE.toml  SECURITY.md  TRADEMARK.md
.github/workflows/: ci.yml
LICENSES/: LicenseRef-Civora-Trademark.txt
assets/: README.md
assets/logo/: README.md
assets/official/: README.md
crates/civora-client/: Cargo.toml
crates/civora-client/src/: cli.rs  debug.rs  hud.rs  identity.rs  interact.rs  ledger.rs  main.rs  menu.rs  net.rs  packs.rs  player.rs  render.rs  sim_bridge.rs  voting.rs
crates/civora-governance/: Cargo.toml
crates/civora-governance/src/: certificate.rs  cid.rs  epoch.rs  ledger.rs  lib.rs  proposal.rs  signed.rs  store.rs  vote.rs
crates/civora-governance/tests/: certificate.rs  governance.rs  ledger.rs  store.rs  vote.rs
crates/civora-identity/: Cargo.toml
crates/civora-identity/src/: identity.rs  keyfile.rs  lib.rs  log.rs  signed.rs
crates/civora-identity/tests/: identity.rs
crates/civora-net/: Cargo.toml
crates/civora-net/src/: behaviour.rs  codec.rs  event_loop.rs  lib.rs  peer.rs  wire.rs
crates/civora-net/tests/: sync.rs
crates/civora-sim/: Cargo.toml
crates/civora-sim/src/: action.rs  block.rs  chunk.rs  lib.rs  raycast.rs  tick.rs  world.rs
crates/civora-sim/tests/: sim.rs
plans/: accepted-proposal-ledger.md  agent-cli.md  approve-a-plan-for-imperative-dijkstra.md  asset-hot-patch.md  cozy-singing-tiger.md  create-a-plan-for-imperative-dijkstra.md  load-the-markdown-files-shiny-lerdorf.md  patch-packs.md  wasm-abi.md
realms/: README.md
realms/genesis-realm/: README.md
realms/genesis-realm/assets/: README.md
realms/templates/: README.md
sdk/: README.md
sdk/examples/: README.md
sdk/rust/: README.md
sdk/wit/: README.md
