[workspace]
resolver = "3"
members = ["crates/civora-sim", "crates/civora-identity", "crates/civora-client"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Keep debug builds playable: optimize dependencies (Bevy) even in dev.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
